<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_bookmark"
        android:title="@string/bookmark"
        android:icon="@drawable/icon_bookmark"/>

    <item android:id="@+id/menu_save"
        android:title="@string/save"
        android:icon="@drawable/icon_save"/>

    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/icon_search"/>

    <item android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="@drawable/icon_share"/>

    <item android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/icon_delete"/>

    <item android:id="@+id/menu_preferences"
        android:title="@string/preferences"
        android:icon="@drawable/icon_preferences"/>
</menu>